pbb.css
blockquote {
	border-left: 5px solid #eee;
	color: #666;
	margin: auto;
	padding: 0 1.6em;
}

body {
	color: #333;
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 18px;
	line-height: 1.6;
	margin: 40px auto;
	max-width: 670px;
	padding: 0 10px;
}

code {
	font-family: 'Source Code Pro', monospace;
	font-size: 16px;
}

:not(pre) > code {
	color: #C7254E;
}

h1,
h2,
h3 {
	line-height: 1.2;
}

img {
	max-width: 100%;
}

pre  {
	background-color: #eee;
	padding: 9px;
}

